--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,9 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="shortcut icon" href="<%= BASE_URL %>favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700|Product+Sans|Material+Icons" rel="stylesheet">
 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134054043-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-134054043-2');
+    </script>
+    
     <title>MVHS URL Shortener</title>
   </head>
   <body>
